vercel analytics included

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "type": "module"
   },
   "dependencies": {
     "@clerk/nextjs": "^4.29.12",
@@ -16,6 +17,7 @@
     "@radix-ui/react-toast": "^1.1.5",
     "@stream-io/node-sdk": "^0.1.13",
     "@stream-io/video-react-sdk": "^0.6.3",
+    "@vercel/analytics": "^1.2.2",
     "@vercel/speed-insights": "^1.0.10",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
